<resources>
    <string name="app_name">Calculator</string>
    <string name="c">C</string>
    <string name="_7">7</string>
    <string name="sqr">\u221A</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="per">%</string>
    <string name="sub">-</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="dec">.</string>
    <string name="_0">0</string>
    <string name="plusneg">±</string>
    <string name="sqroot">√</string>
    <string name="multi">×</string>
    <string name="div">÷</string>
</resources>